# adventOfCode2025

./: .gitignore  Cargo.toml  README.md
day1/: Cargo.toml
day10/: Cargo.toml
day10/src/: lamps.rs  lib.rs  sm.rs  sm2.rs
day11/: Cargo.toml
day12/: Cargo.toml
day12/src/: block.rs  lib.rs  region.rs  shape.rs
day2/: Cargo.toml
day3/: Cargo.toml
day4/: Cargo.toml
day5/: Cargo.toml
day6/: Cargo.toml
day7/: Cargo.toml  perf.data  perf.data.old
day8/: Cargo.toml
day9/: Cargo.toml
