[workspace]
members = [
  "./day1",
  "./day2",
  "./day3",
  "./day4",
  "./day5",
  "./day6",
  "./day7",
  "./day8",
  "./day9",
  "./day10"
]
resolver = "2"

[workspace.dependencies]
glam = "0.29.2"
nom = "7.1.3"
itertools = "0.13.0"

[workspace.package]
edition = "2024"
readme = "README.md"
description = "My solutions to the advent of code puzzles."
license = "MIT"
keywords = []
categories = []
repository = "https://github.com/martinfrances107/adventOfCode2025.git"
[profile.release]
debug = true
