[package]
name = "day3"
version = "0.1.0"
edition = {workspace = true}
readme = {workspace = true}
repository = {workspace = true}
keywords=[]
categories = []
description= {workspace=true}
license = {workspace = true}

[[bin]]
name = "part1"
test = true


[[bin]]
name = "part2"
test = true

[dependencies]
nom = { workspace = true }
